istio-teaching/authorizationpolicies/details-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: details-allow-all
spec:
 selector:
   matchLabels:
     app: details
 action: ALLOW
 rules:
 - to:
   - operation:
       methods: ["GET", "POST"]
