istio-teaching/authorizationpolicies/reviews-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: reviews-allow-all
spec:
 selector:
   matchLabels:
     app: reviews
 action: ALLOW
 rules:
 - to:
   - operation:
       methods: ["GET", "POST"]
